# Finance_project

./: pyproject.toml
config/: settings.py  urls.py
finance/: urls.py  views.py
finance/templates/finance/: main.html
static/css/: index.css
